--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1068116027396050');
 fbq('init', '263854332598272');
+fbq('init', '388564922645895');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
@@ -68,7 +69,7 @@ src="https://www.facebook.com/tr?id=1068116027396050&ev=PageView&noscript=1"
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Ocultados por seculos estes segredos DESTRAVAM e DESBLOQUEIAM sua vida...</b></h3>
+            <h3 class="my-4"><b>Ocultados por seculos estes segredos DESTRAVAM e DESBLOQUEIAM...</b></h3>
 
             <!-- VSL -->
            <script type="text/javascript" id="scr_623b30f134cf0a000e72bb30">var s=document.createElement("script");s.src="https://cdn.converteai.net/552e0840-0c7c-46d9-8df8-d0f5061d00b1/players/623b30f134cf0a000e72bb30/player.js",s.async=!0,document.head.appendChild(s);</script>
