--- a/filtro/index.html
+++ b/filtro/index.html
@@ -2,6 +2,16 @@
 <html lang="pt-br">
 <title>Esotericos</title>
 <head>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8EBDPYS2NZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8EBDPYS2NZ');
+</script>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -87,6 +97,7 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1068116027396050');
+fbq('init', '263854332598272');    
 fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
